added user profile route

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %} Register {% endblock %}
 {% block content %}
 
   <h1 class="display-4">Register</h1>
@@ -24,5 +25,5 @@
 
   </form>
 
-<h3>Already a user <a href="/login">Login</a></h3>
+<p>Already a user <a href="/login">Login</a></p>
 {% endblock %}
