--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="static/bootstrap.css">
+  <link rel="stylesheet" href="/static/bootstrap.css">
 
   <title>{% block title %} {% endblock %}</title>
 </head>
