--- a/templates/login.html
+++ b/templates/login.html
@@ -24,5 +24,6 @@
     <button type="submit">Log In</button>
 
   </form>
+  <p>Need an account?  <a href="/register">Register</a></p>
 
 {% endblock %}
